--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 amqp==5.3.1
+anyio==4.12.0
 asgiref==3.11.0
 attrs==25.4.0
 billiard==4.2.4
@@ -19,6 +20,9 @@ django-timezone-field==7.1
 djangorestframework==3.16.1
 drf-spectacular==0.29.0
 exceptiongroup==1.3.1
+flower==2.0.1
+graphql-core==3.2.5
+humanize==4.14.0
 idna==3.11
 inflection==0.5.1
 jsonschema==4.25.1
@@ -28,6 +32,7 @@ mypy_extensions==1.1.0
 packaging==25.0
 pathspec==0.12.1
 platformdirs==4.5.0
+prometheus_client==0.23.1
 prompt_toolkit==3.0.52
 psycopg==3.2.13
 psycopg-binary==3.2.13
@@ -35,6 +40,7 @@ python-crontab==3.3.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 pytokens==0.3.0
+pytz==2025.2
 PyYAML==6.0.3
 redis==6.4.0
 referencing==0.37.0
@@ -42,6 +48,8 @@ requests==2.32.5
 rpds-py==0.29.0
 six==1.17.0
 sqlparse==0.5.4
+starlette==0.50.0
+tornado==6.5.2
 typing_extensions==4.15.0
 tzdata==2025.2
 tzlocal==5.3.1
